# blutwerte

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml  import_blutwerte.sh
.github/workflows/: docker.yml
backend/: package-lock.json  package.json
backend/src/: config.ts  index.ts
backend/src/auth/: oidc.ts
backend/src/middleware/: requireAuth.ts
backend/src/routes/: adminReference.ts  ai.ts  auth.ts  bloodvalues.ts  reference.ts  shares.ts  tokens.ts  user.ts
backend/src/services/: fileStore.ts  llm.ts
backend/src/types/: index.ts
data/: reference_values.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ShareDialog.tsx  TrafficLight.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AdminReference.tsx  AiDoctor.tsx  AllValues.tsx  Dashboard.tsx  EnterValues.tsx  Login.tsx  Profile.tsx  ScanImport.tsx  SharedData.tsx  ValueDetail.tsx
frontend/src/types/: index.ts
gtk-app/: Cargo.toml
gtk-app/src/: app.rs  config.rs  main.rs  state.rs
gtk-app/src/api/: client.rs  types.rs
gtk-app/src/ui/: mod.rs  settings.rs  setup_dialog.rs  window.rs
gtk-app/src/ui/ai_chat/: input_bar.rs  message_row.rs  mod.rs
gtk-app/src/ui/dashboard/: category_group.rs  mod.rs  summary_bar.rs  value_card.rs
gtk-app/src/ui/value_detail/: chart.rs  history_table.rs  mod.rs
